[project]
name = "comfyui-llama-cpp"
description = "Custom ComfyUI nodes for interacting with llama.cpp server through its OpenAI-compatible API."
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ggml-org/llama.cpp"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "local"
DisplayName = "comfyui-llama-cpp"
Icon = ""
